--- a/todo.txt
+++ b/todo.txt
@@ -12,6 +12,10 @@ Port Descent 2.
         Texmap will probably also be separated, due to the considerable overhaul in it.
     Will probably require some funky work with the CMakeLists
     MVE decoder is required. Introduce libmve from D2X?
+Warningless compile.
+    Going to have to without question invoke my ドＭ side for this one...
+    fuck MSVC's deprecation warnings, but pay attention to cases where buffer overruns are actually possible. There's plenty of 'em.
+    Find some way to tame MSVC's aggressive and sometimes sketchy static analysis (https://i.imgur.com/nPfdQHt.png)
 
 Small scale changes:
     User directory based configuration files. Currently assumes data is in working dir. Won't work on Windows if in program files, or Linux if in the proper locations, and so on...
